envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 10000 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: "User-Id"
                                exact_match: "1"
                          route:
                            cluster: grpc_server1
                        - match:
                            prefix: "/"
                            headers:
                              - name: "User-Id"
                                exact_match: "2"
                          route:
                            cluster: grpc_server2
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: grpc_server1
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: { }
      lb_policy: round_robin
      load_assignment:
        cluster_name: grpc_server1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: server1
                      port_value: 8080
    - name: grpc_server2
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: { }
      lb_policy: round_robin
      load_assignment:
        cluster_name: grpc_server2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: server2
                      port_value: 7070
